Fix data visualizer backward arrow and structure overlap

--- a/src/styles/_playground.scss
+++ b/src/styles/_playground.scss
@@ -12,7 +12,3 @@
     }
   }
 }
-
-.konvajs-content {
-  width: 100% !important;
-}
